# aptos-core

./: Cargo.toml
api/goldens/: aptos_api__tests__call_trace_test__test_get_call_trace_by_hash.json
api/src/: transactions.rs
api/src/tests/: call_trace_test.rs  call_trace_tests.rs  mod.rs
api/types/src/: call_trace.rs  lib.rs
aptos-move/aptos-tracer/: Cargo.toml
aptos-move/aptos-tracer/src/: config.rs  converter.rs  lib.rs  main.rs  server.rs  sync_rest_interface.rs  sync_storage_interface.rs  sync_tracer_view.rs
aptos-move/aptos-validator-interface/: Cargo.toml
aptos-move/aptos-validator-interface/src/: lib.rs  rest_interface.rs  storage_interface.rs
aptos-move/aptos-vm/src/: aptos_vm.rs
aptos-move/aptos-vm/src/move_vm_ext/session/: mod.rs
aptos-move/aptos-vm/src/verifier/: transaction_arg_validation.rs
crates/aptos-rest-client/src/: client_builder.rs  lib.rs
devtools/aptos-cargo-cli/src/: common.rs
docker/builder/: aptos-tracer.Dockerfile  build-tools.sh  build-tracer.sh  builder.Dockerfile  docker-bake-rust-all.hcl
