[package]
name = "aptos-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.11.1"

bcs = { workspace = true }
anyhow = { workspace = true }
aptos-crypto = { workspace = true }
aptos-gas-profiling = { workspace = true }
aptos-logger = { workspace = true }
aptos-resource-viewer = { workspace = true }
aptos-rest-client = { workspace = true }
aptos-types = { workspace = true }
aptos-validator-interface = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-logging = { workspace = true }
aptos-vm-types = { workspace = true }
clap = { workspace = true }
move-binary-format = { workspace = true }
move-cli = { workspace = true }
move-compiler = { workspace = true }
move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
move-table-extension = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
poem = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-db = { workspace = true }
aptos-config = { workspace = true }
aptos-framework = { workspace = true }
move-bytecode-source-map = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
hex = { workspace = true }
aptos-utils = { workspace = true }
aptos-api-types = { workspace = true }
